crates/veil-guardian/tests/snapshots/report_output__report_output_deterministic.snap
---
source: crates/veil-guardian/tests/report_output.rs
assertion_line: 123
expression: normalized
---
Found 2 vulnerabilities in 2 packages scanned:
Cache: 3 fresh, 0 stale, 0 network, 0 offline, 0 error

- a-lib v1.0.0 (npm)
  Locations: [TEMP]/package-lock.json
  [GHSA-1] Critical issue in A
    Fix: Upgrade to >= 1.0.1
    Status: Hit (Fresh)

  [GHSA-2] Medium issue in A
    Fix: No fixed version available (mitigation required)
    Status: Hit (Fresh)

- b-lib v2.0.0 (npm)
  Locations: [TEMP]/package-lock.json
  [GHSA-3] Low issue in B
    Fix: No fixed version available (mitigation required)
    Status: Hit (Fresh)
