crates/veil-guardian/tests/snapshots/report_output__report_output_duplicates.snap
---
source: crates/veil-guardian/tests/report_output.rs
assertion_line: 196
expression: normalized
---
Found 1 vulnerabilities in 1 packages scanned:
Cache: 1 fresh, 0 stale, 0 network, 0 offline, 0 error

- a-lib v1.0.0 (npm)
  Locations: [TEMP]/package-lock.json
  [GHSA-1] Critical issue in A
    Fix: Upgrade to >= 1.0.1
    Status: Hit (Fresh)
